feat(DF-625): Reorder the steps performed to add Azure users and Azure Devops licenses

--- a/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-start-aksdev.yml
@@ -3,6 +3,8 @@ name: nm-factory-inf-pip-operation-start-aksdev
 pool:
   name: Factory-VSS-Agents
 
+trigger: none
+
 schedules:
 - cron: "30 5 * * 1-5"
   displayName: Starting the AKStest cluster
