--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -39,24 +39,12 @@ stages:
     variables:
     - name: BRANCHTARGET
       value: "feature/${{ parameters.branch }}"
-    - name: BRANCHSOURCE
-      value: "refs/heads/main"
     - name: AZUREREPO
       value: "nm-factory-inf-env-pro"
     - name: AZUREDEVOPSREPO
       value: "nm-factory-inf-env-azdevops"
-    - name: ORGURL
-      value: "https://dev.azure.com/ecl-ado-factory"
     - name: PROJECT
       value: "ecl-ado-prj-iac"
-    - name: AZUREURIBRANCHSTATUS
-      value: "${{ variables.ORGURL }}/${{ variables.PROJECT }}/_apis/git/repositories/${{ variables.AZUREREPO }}/stats/branches?name=${{ variables.BRANCHTARGET }}"
-    - name: AZUREURICHECKACTIVEPR
-      value: "${{ variables.ORGURL }}/${{ variables.PROJECT }}/_apis/git/repositories/${{ variables.AZUREREPO }}/pullrequests?searchCriteria.targetRefName=${{ variables.BRANCHTARGET }}&searchCriteria.sourceRefName=${{ variables.BRANCHSOURCE }}"       
-    - name: AZUREDEVURIBRANCHSTATUS
-      value: "${{ variables.ORGURL }}/${{ variables.PROJECT }}/_apis/git/repositories/${{ variables.AZUREDEVOPSREPO }}/stats/branches?name=${{ variables.BRANCHTARGET }}"
-    - name: AZUREDEVURICHECKACTIVEPR
-      value: "${{ variables.ORGURL }}/${{ variables.PROJECT }}/_apis/git/repositories/${{ variables.AZUREDEVOPSREPO }}/pullrequests?searchCriteria.targetRefName=${{ variables.BRANCHTARGET }}&searchCriteria.sourceRefName=${{ variables.BRANCHSOURCE }}"               
     - name: REVIEWERS
       value: ecl-ado-notification-team
 
@@ -320,34 +308,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          #!/bin/bash    
-
-          echo "Create needed variables for the PR at $AZUREREPO repository"
-          STATUS=`curl -u :$(System.AccessToken) $AZUREURIBRANCHSTATUS | jq -r .aheadCount`
-          ACTIVEPR=`curl -u :$(System.AccessToken) $AZUREURICHECKACTIVEPR | jq -r .count`
-
-          echo "Install Azure Devops extension"
-          az config set extension.use_dynamic_install=yes_without_prompt
-          az extension add --name azure-devops
-
-          echo "Login to az devops to allow PR creation"
-          echo $(System.AccessToken) | az devops login
-
-          echo "Check that the branch has changes from main and also that the PR is not created previously before creating the new PR at $AZUREREPO repository"
-          if [[ $STATUS == '0' ]]
-          then
-            echo "Current branch contains last changes from main in $AZUREREPO repository"
-          else
-            if [[ $ACTIVEPR > '0' ]]
-            then
-              echo "PR exists already at $AZUREREPO repository"
-            else
-              az repos pr create -r $AZUREREPO -s $BRANCHTARGET -p $PROJECT --org $ORGURL --delete-source-branch true --description "## What does this PR do?" "This PR is to add/remove users indicated at ticket ${{ parameters.branch }}" "" "## Why is it necessary?" "Because the users need this access to perform his daily job." "" "## Pull request type" "- [ ] Bugfix" "- [ ] New feature" "- [X] IaC change" "- [ ] Add new alert" "- [ ] Alert modification" "" "## Related ticket" "${{ parameters.branch }}" "" "Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket." "" "## CI Output" "" "N/A" "" "## Checks" "" "- [ ] The PR has a descriptive title" "- [ ] The changes section has been checked" "- [ ] A person has been assigned to this PR" "- [ ] Clear comments `<-- -->` from sections" --reviewer $REVIEWERS --title "Performed the actions requested at ticket ${{ parameters.branch }}"   
-            fi
-          fi      
-
-          echo "Logout from Azure account"
-          az logout
+          bash scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
       displayName: "Pull Request creation for ${{ variables.AZUREDEVOPSREPO }} repository" 
@@ -360,34 +321,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          #!/bin/bash   
-
-          echo "Create needed variables for the PR at $AZUREDEVOPSREPO repository"
-          STATUS=`curl -u :$(System.AccessToken) $AZUREDEVURIBRANCHSTATUS | jq -r .aheadCount`
-          ACTIVEPR=`curl -u :$(System.AccessToken) $AZUREDEVURICHECKACTIVEPR | jq -r .count`
-
-          echo "Install Azure Devops extension"
-          az config set extension.use_dynamic_install=yes_without_prompt
-          az extension add --name azure-devops
-
-          echo "Login to az devops to allow PR creation"
-          echo $(System.AccessToken) | az devops login
-
-          echo "Check that the branch has changes from main and also that the PR is not created previously before creating the new PR at $AZUREDEVOPSREPO repository"
-          if [[ $STATUS == '0' ]]
-          then
-            echo "Current branch contains last changes from main in $AZUREDEVOPSREPO repository"
-          else
-            if [[ $ACTIVEPR > '0' ]]
-            then
-              echo "PR exists already at $AZUREDEVOPSREPO repository"
-            else
-              az repos pr create -r $AZUREDEVOPSREPO -s $BRANCHTARGET -p $PROJECT --org $ORGURL --delete-source-branch true --description "## What does this PR do?" "This PR is to add/remove users indicated at ticket ${{ parameters.branch }}" "" "## Why is it necessary?" "Because the users need this access to perform his daily job." "" "## Pull request type" "- [ ] Bugfix" "- [ ] New feature" "- [X] IaC change" "- [ ] Add new alert" "- [ ] Alert modification" "" "## Related ticket" "${{ parameters.branch }}" "" "Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket." "" "## CI Output" "" "N/A" "" "## Checks" "" "- [ ] The PR has a descriptive title" "- [ ] The changes section has been checked" "- [ ] A person has been assigned to this PR" "- [ ] Clear comments `<-- -->` from sections" --reviewer $REVIEWERS --title "Performed the actions requested at ticket ${{ parameters.branch }}"   
-            fi
-          fi
-
-          echo "Logout from Azure account"
-          az logout
+          bash scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
       displayName: "Merging with main branch at repository ${{ variables.AZUREREPO }}" 
@@ -400,27 +334,8 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          #!/bin/bash    
+          bash approve-pr.sh $(mypat) ${{ variables.AZUREREPO }} ${{ parameters.branch }}
 
-          echo "Login to az devops to allow PR approvation and merged"
-          echo $(mypat) | az devops login --organization $ORGURL
-
-          echo "Get the PR ID to perform the merge action"
-          PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
-
-          if [[ -z "$PRID" ]]
-          then
-            echo "PR does not exist"
-          else
-            echo "Approve the PR created"
-            az repos pr set-vote --org $ORGURL --id $PRID --vote approve
-
-            echo "Merging the PR with main"
-            az repos pr update --org $ORGURL --id $PRID --status completed
-          fi
-
-          echo "Logout from Azure account"
-          az logout
 
     - task: AzureCLI@2
       displayName: "Merging with main branch at repository ${{ variables.AZUREDEVOPSREPO }}" 
@@ -435,31 +350,7 @@ stages:
         inlineScript: |
           #!/bin/bash    
 
-          echo "Checking that mail address is correct"
-          if [[ ${{ parameters.mail }} =~ "@paradigmadigital.com" ]] || [[ ${{ parameters.mail }} =~ "#EXT#@asistemaspt.onmicrosoft.com" ]]
+          if [[ ${{ parameters.option }} == dplt_pipeline ]] || [[ ${{ parameters.option }} == avitech_slovakia ]] || [[ ${{ parameters.option }} == remove_user ]]
           then
-
-            if [[ ${{ parameters.option }} == dplt_pipeline ]] || [[ ${{ parameters.option }} == avitech_slovakia ]] || [[ ${{ parameters.option }} == remove_user ]]
-            then
-
-              echo "Login to az devops to allow PR approvation and merged"
-              echo $(mypat) | az devops login --organization $ORGURL
-
-              echo "Get the PR ID to perform the merge action"
-              PRID=`az repos pr list --org $ORGURL -p $PROJECT -r $AZUREDEVOPSREPO -s $BRANCHTARGET | grep codeReviewId | awk '{print $2}' | cut -d',' -f1`
-
-              if [[ -z "$PRID" ]]
-              then
-                echo "PR does not exist"
-              else
-                echo "Approve the PR created"
-                az repos pr set-vote --org $ORGURL --id $PRID --vote approve
-
-                echo "Merging the PR with main"
-                az repos pr update --org $ORGURL --id $PRID --status completed
-              fi
-            fi
-          
-          else
-            echo "The mail format is not correct" 
+            bash approve-pr.sh $(mypat) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }}
           fi
