feat(DF-641): Checking the directory content

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -391,6 +391,7 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: |
           pwd
+          ls -lat
           bash azure-adding-user/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
