feat(DF-641): Checking the path of the pipeline

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -392,7 +392,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          ls -lat
+          ls adding-azure-user
           bash adding-azure-user/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
