--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -59,5 +59,5 @@ stages:
           cd $(System.DefaultWorkingDirectory)/200-jenkins-agent-vm-dplt
           echo "terraform init"
           terraform init
-          echo "terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
-          terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
+          echo "terraform plan -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
+          terraform plan -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
