--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -27,6 +27,8 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
+    - checkout: nm-factory-inf-pip-terraform
+
     - task: AzureKeyVault@2
       displayName: 'Azure Key Vault: ecl-az-seed-kvt-01-tfkv'
       inputs:
@@ -35,19 +37,21 @@ stages:
         SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
         RunAsPreJob: true
 
-    - checkout: nm-factory-inf-pip-terraform
-
     - task: AzureCLI@2
       displayName: 'Install SSH Keys'
       inputs:
         azureSubscription: 'ecl-az-fact-svc-01-armconnection'
         scriptType: bash
-        scriptPath: '$(System.DefaultWorkingDirectory)/bash/az_ssh_install.sh'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          #!/bin/bash
 
-    - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
-      displayName: 'Install Terraform 1.3.0'
-      inputs:
-        terraformVersion: 1.3.0
+          set -o errexit  # Exit on error
+          set -o nounset  # Exit on uninitalized vars
+          set -o pipefail # Exit on pipe exec fail
+
+          ls -lrtha $(System.DefaultWorkingDirectory)
+        displayName: 'Test'
 
     - checkout: nm-factory-inf-env-pro
         
