add ssh install

--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -35,6 +35,8 @@ stages:
         SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
         RunAsPreJob: true
 
+    - checkout: nm-factory-inf-pip-terraform
+    
     - task: AzureCLI@2
       displayName: "Check directory SSH" 
       inputs:
