--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -27,6 +27,9 @@ stages:
   jobs:
   - job: recreate_jenkins_agent_vm
     steps:
+    - checkout: nm-factory-inf-pip-terraform
+    - checkout: nm-factory-inf-env-pro
+
     - task: AzureKeyVault@2
       displayName: 'Azure Key Vault: ecl-az-seed-kvt-01-tfkv'
       inputs:
@@ -34,8 +37,6 @@ stages:
         KeyVaultName: 'ecl-az-seed-kvt-01-tfkv'
         SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
         RunAsPreJob: true
-
-    - checkout: nm-factory-inf-pip-terraform
     
     - task: AzureCLI@2
       displayName: "Check directory SSH" 
@@ -49,7 +50,8 @@ stages:
           set -o errexit  # Exit on error
           set -o nounset  # Exit on uninitalized vars
           set -o pipefail # Exit on pipe exec fail
-          
+
+          ls -lrtha $(Build.SourcesDirectory)
           ls -lrtha '$(System.DefaultWorkingDirectory)'
           ls -lrtha '$(System.DefaultWorkingDirectory)/nm-factory-inf-pip-terraform'
           ls -lrtha '$(System.DefaultWorkingDirectory)/nm-factory-inf-pip-terraform/bash'
