--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -37,7 +37,12 @@ stages:
         KeyVaultName: 'ecl-az-seed-kvt-01-tfkv'
         SecretsFilter: 'terraform-app-client-id, terraform-app-secret'
         RunAsPreJob: true
-    
+        
+    - task: ms-devlabs.custom-terraform-tasks.custom-terraform-installer-task.TerraformInstaller@0
+      displayName: 'Install Terraform 1.3.0'
+      inputs:
+        terraformVersion: 1.3.0
+
     - task: AzureCLI@2
       displayName: "Check directory SSH" 
       inputs:
