--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -44,21 +44,6 @@ stages:
         terraformVersion: 1.3.0
 
     - task: AzureCLI@2
-      displayName: "Check directory SSH" 
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          #!/bin/bash
-
-          set -o errexit  # Exit on error
-          set -o nounset  # Exit on uninitalized vars
-          set -o pipefail # Exit on pipe exec fail
-
-          ls -lrtha '$(System.DefaultWorkingDirectory)'
-
-    - task: AzureCLI@2
       displayName: 'Install SSH Keys'
       inputs:
         azureSubscription: 'ecl-az-fact-svc-01-armconnection'
@@ -85,5 +70,5 @@ stages:
           cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-pro/200-jenkins-agent-vm-dplt
           echo "terraform init"
           terraform init
-          echo "terraform plan --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
-          terraform plan --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
+          echo "terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
+          terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
