--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -89,5 +89,5 @@ stages:
           cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-pro/200-jenkins-agent-vm-dplt
           echo "terraform init"
           terraform init
-          echo "terraform plan --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
-          terraform plan --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
+          echo "terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main"
+          terraform apply -auto-approve --replace=module.virtual_machine.azurerm_linux_virtual_machine.main
